updating card function and blurring image

--- a/portofolio/assets/style/style.css
+++ b/portofolio/assets/style/style.css
@@ -12,4 +12,5 @@
     background-origin: content-box;
     background-size: cover;
     background-position-y: center;
+    backdrop-filter: blur(10px);
 }
