--- a/portofolio/assets/style/style.css
+++ b/portofolio/assets/style/style.css
@@ -16,6 +16,12 @@ body{
         sans-serif;
 }
 
+#hero-name{
+    background-image: url(../images/gif3.gif);
+    background-position: center;
+    background-size: cover;
+}
+
 .text-heading{
     text-transform: uppercase; 
     font-size: 6vw; 
@@ -55,16 +61,15 @@ body{
 
 .hero-overlay-component{
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: blueviolet;
+    height: 40%;
 }
 
 .image-preview{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
 }
 
@@ -95,4 +100,8 @@ body{
 
 .col{
     flex-direction: column;
+}
+
+.d-none{
+    display: none;
 }
