--- a/portofolio/assets/style/footer.css
+++ b/portofolio/assets/style/footer.css
@@ -4,5 +4,14 @@
     bottom: 0;
     left: 0;
     z-index: 10;
-    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-list{
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    font-size: 40px;
 }
