--- a/portofolio/assets/style/animation.css
+++ b/portofolio/assets/style/animation.css
@@ -1,3 +1,51 @@
+.title1 span {
+  display: inline-block;
+  transform: translateX(-5em);
+  opacity: 0;
+  animation: slideInLR 2s forwards;
+}
+
+/* .title { animation-delay: 0s; } */
+.title1 span:nth-child(6){ animation-delay: 0.4s; }
+.title1 span:nth-child(5){ animation-delay: 0.8s; }
+.title1 span:nth-child(4){ animation-delay: 1.2s; }
+.title1 span:nth-child(3){ animation-delay: 1.5s; }
+.title1 span:nth-child(2){ animation-delay: 1.8s; }
+.title1 span:nth-child(1){ animation-delay: 2s; }
+
+@keyframes slideInLR {
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.title2 span {
+  display: inline-block;
+  transform: translateX(5em);
+  opacity: 0;
+  animation: slideInRL 2s forwards;
+}
+
+/* .title { animation-delay: 0s; } */
+.title2 span:nth-child(1){ animation-delay: 0.2s; }
+.title2 span:nth-child(2){ animation-delay: 0.4s; }
+.title2 span:nth-child(3){ animation-delay: 0.6s; }
+.title2 span:nth-child(4){ animation-delay: 0.8s; }
+.title2 span:nth-child(5){ animation-delay: 1s; }
+.title2 span:nth-child(6){ animation-delay: 1.2s; }
+.title2 span:nth-child(7){ animation-delay: 1.4s; }
+.title2 span:nth-child(8){ animation-delay: 1.8s; }
+.title2 span:nth-child(9){ animation-delay: 2s; }
+
+@keyframes slideInRL {
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
 .slide-up {
   animation: slideUp 0.8s ease-out forwards;
 }
