--- a/portofolio/assets/style/animation.css
+++ b/portofolio/assets/style/animation.css
@@ -2,16 +2,16 @@
   display: inline-block;
   transform: translateX(-5em);
   opacity: 0;
-  animation: slideInLR 2s forwards;
+  animation: slideInLR 3s forwards;
 }
 
 /* .title { animation-delay: 0s; } */
-.title1 span:nth-child(6){ animation-delay: 0.4s; }
-.title1 span:nth-child(5){ animation-delay: 0.8s; }
-.title1 span:nth-child(4){ animation-delay: 1.2s; }
-.title1 span:nth-child(3){ animation-delay: 1.5s; }
-.title1 span:nth-child(2){ animation-delay: 1.8s; }
-.title1 span:nth-child(1){ animation-delay: 2s; }
+.title1 span:nth-child(6){ animation-delay: 0.1s; }
+.title1 span:nth-child(5){ animation-delay: 0.2s; }
+.title1 span:nth-child(4){ animation-delay: 0.3s; }
+.title1 span:nth-child(3){ animation-delay: 0.4s; }
+.title1 span:nth-child(2){ animation-delay: 0.5s; }
+.title1 span:nth-child(1){ animation-delay: 0.6s; }
 
 @keyframes slideInLR {
   to {
@@ -20,28 +20,75 @@
   }
 }
 
+.endtitle1 span {
+  display: inline-block;
+  transform: translateX(0);
+  opacity: 1;
+  animation: endslideInLR 3.5s forwards;
+}
+
+/* .title { animation-delay: 0s; } */
+.endtitle1 span:nth-child(6){ animation-delay: 0.1s; }
+.endtitle1 span:nth-child(5){ animation-delay: 0.2s; }
+.endtitle1 span:nth-child(4){ animation-delay: 0.3s; }
+.endtitle1 span:nth-child(3){ animation-delay: 0.4s; }
+.endtitle1 span:nth-child(2){ animation-delay: 0.5s; }
+.endtitle1 span:nth-child(1){ animation-delay: 0.6s; }
+
+@keyframes endslideInLR {
+  to {
+    transform: translateX(5em);
+    opacity: 0;
+  }
+}
+
 .title2 span {
   display: inline-block;
   transform: translateX(5em);
   opacity: 0;
-  animation: slideInRL 2s forwards;
+  animation: slideInRL 3s forwards;
 }
 
 /* .title { animation-delay: 0s; } */
-.title2 span:nth-child(1){ animation-delay: 0.2s; }
-.title2 span:nth-child(2){ animation-delay: 0.4s; }
-.title2 span:nth-child(3){ animation-delay: 0.6s; }
-.title2 span:nth-child(4){ animation-delay: 0.8s; }
-.title2 span:nth-child(5){ animation-delay: 1s; }
-.title2 span:nth-child(6){ animation-delay: 1.2s; }
-.title2 span:nth-child(7){ animation-delay: 1.4s; }
-.title2 span:nth-child(8){ animation-delay: 1.8s; }
-.title2 span:nth-child(9){ animation-delay: 2s; }
+.title2 span:nth-child(1){ animation-delay: 0.1s; }
+.title2 span:nth-child(2){ animation-delay: 0.2s; }
+.title2 span:nth-child(3){ animation-delay: 0.3s; }
+.title2 span:nth-child(4){ animation-delay: 0.4s; }
+.title2 span:nth-child(5){ animation-delay: 0.5s; }
+.title2 span:nth-child(6){ animation-delay: 0.6s; }
+.title2 span:nth-child(7){ animation-delay: 0.7s; }
+.title2 span:nth-child(8){ animation-delay: 0.8s; }
+.title2 span:nth-child(9){ animation-delay: 0.9s; }
 
 @keyframes slideInRL {
   to {
     transform: translateX(0);
     opacity: 1;
+  }
+}
+
+.endtitle2 span {
+  display: inline-block;
+  transform: translateX(0);
+  opacity: 1;
+  animation: endslideInRL 3.5s forwards;
+}
+
+/* .title { animation-delay: 0s; } */
+.endtitle2 span:nth-child(1){ animation-delay: 0.1s; }
+.endtitle2 span:nth-child(2){ animation-delay: 0.2s; }
+.endtitle2 span:nth-child(3){ animation-delay: 0.3s; }
+.endtitle2 span:nth-child(4){ animation-delay: 0.4s; }
+.endtitle2 span:nth-child(5){ animation-delay: 0.5s; }
+.endtitle2 span:nth-child(6){ animation-delay: 0.6s; }
+.endtitle2 span:nth-child(7){ animation-delay: 0.7s; }
+.endtitle2 span:nth-child(8){ animation-delay: 0.8s; }
+.endtitle2 span:nth-child(9){ animation-delay: 0.9s; }
+
+@keyframes endslideInRL {
+  to {
+    transform: translateX(-5em);
+    opacity: 0;
   }
 }
 
