--- a/portofolio/assets/style/animation.css
+++ b/portofolio/assets/style/animation.css
@@ -29,11 +29,11 @@
 
 /* .title { animation-delay: 0s; } */
 .endtitle1 span:nth-child(6){ animation-delay: 0.1s; }
-.endtitle1 span:nth-child(5){ animation-delay: 0.2s; }
-.endtitle1 span:nth-child(4){ animation-delay: 0.3s; }
-.endtitle1 span:nth-child(3){ animation-delay: 0.4s; }
-.endtitle1 span:nth-child(2){ animation-delay: 0.5s; }
-.endtitle1 span:nth-child(1){ animation-delay: 0.6s; }
+.endtitle1 span:nth-child(5){ animation-delay: 0.1s; }
+.endtitle1 span:nth-child(4){ animation-delay: 0.1s; }
+.endtitle1 span:nth-child(3){ animation-delay: 0.1s; }
+.endtitle1 span:nth-child(2){ animation-delay: 0.1s; }
+.endtitle1 span:nth-child(1){ animation-delay: 0.1s; }
 
 @keyframes endslideInLR {
   to {
@@ -76,14 +76,14 @@
 
 /* .title { animation-delay: 0s; } */
 .endtitle2 span:nth-child(1){ animation-delay: 0.1s; }
-.endtitle2 span:nth-child(2){ animation-delay: 0.2s; }
-.endtitle2 span:nth-child(3){ animation-delay: 0.3s; }
-.endtitle2 span:nth-child(4){ animation-delay: 0.4s; }
-.endtitle2 span:nth-child(5){ animation-delay: 0.5s; }
-.endtitle2 span:nth-child(6){ animation-delay: 0.6s; }
-.endtitle2 span:nth-child(7){ animation-delay: 0.7s; }
-.endtitle2 span:nth-child(8){ animation-delay: 0.8s; }
-.endtitle2 span:nth-child(9){ animation-delay: 0.9s; }
+.endtitle2 span:nth-child(2){ animation-delay: 0.1s; }
+.endtitle2 span:nth-child(3){ animation-delay: 0.1s; }
+.endtitle2 span:nth-child(4){ animation-delay: 0.1s; }
+.endtitle2 span:nth-child(5){ animation-delay: 0.1s; }
+.endtitle2 span:nth-child(6){ animation-delay: 0.1s; }
+.endtitle2 span:nth-child(7){ animation-delay: 0.1s; }
+.endtitle2 span:nth-child(8){ animation-delay: 0.1s; }
+.endtitle2 span:nth-child(9){ animation-delay: 0.1s; }
 
 @keyframes endslideInRL {
   to {
@@ -147,4 +147,35 @@
     to{
         width: 100%;
     }
+}
+
+.up-To-Down{
+  animation: upToDown 2s ease-out forwards
+}
+
+@keyframes upToDown {
+    from{
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+    to{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.mid-To-Down{
+  animation: midToDown 2s ease-out forwards
+}
+
+@keyframes midToDown {
+  from{
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  to{
+    transform: translateY(100%);
+    opacity: 0;
+  }
 }
